macrotable/tests/ui/err/non_ident_input_value.stderr
error: expected identifier
 --> tests/ui/err/non_ident_input_value.rs:4:24
  |
4 |     repeat!(#value in [1usize] {
  |                        ^^^^^^
